5.1.2 -> 5.1.3:
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.
    - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	(see --yum:primary.yaml spew for reproducer).
    - jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
    - jbj: fix: is_selinux_enbled() > 0 is the correct test.
    - rpm.org: Mask signals while moving rebuilt rpmdb into place.
    - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
    - jbj: debuginfo: refactor 2 existing upgrade policy rules before
        adding a new contextually sensitive rule for -debuginfo packages.
    - jbj: debuginfo: add general rpmdbCount() to get number of items for
	any tag index, not just RPMTAG_NAME as was in rpmdbCountPackages().
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - jbj: rpmrepo: correct requiressqlentry tag name typo.
    - jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
    - jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
    - jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
    - jbj: tests: verify rpmrepo XML spewage using popt-1.14.
    - jbj: tests: verify XML/YAML markup queries using popt-1.14.
    - jbj: tests: download popt-1.14 packages for use in tests.
    - jbj: yaml: fix: single element string arrays had extra "- ".
    - jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
    - jbj: add expanded build scripts for --specsrpm --queryformat spewage.
    - jbj: backport --queryformat pipeline syntax from HEAD.
    - jbj: update Russian PO file (from Translation Project).
    - jbj: upgrade to db-4.7.25.
    - jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.