@@ -1,22 +1,3 @@
-md2:8350e5a3e24c153df2275c9f80692773  ref/CVS
-md4:31d6cfe0d16ae931b73c59d7e0c089c0  ref/CVS
-md5:d41d8cd98f00b204e9800998ecf8427e  ref/CVS
-sha1:da39a3ee5e6b4b0d3255bfef95601890afd80709  ref/CVS
-sha224:d14a028c2a3a2bc9476102bb288234c415a2b01f828ea62ac5b3e42f  ref/CVS
-sha256:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855  ref/CVS
-sha384:38b060a751ac96384cd9327eb1b1e36a21fdb71114be07434c0cc7bf63f6e1da274edebfe76f65fbd51ad2f14898b95b  ref/CVS
-sha512:cf83e1357eefb8bdf1542850d66d8007d620e4050b5715dc83f4a921d36ce9ce47d0d13c5d85f2b0ff8318d2877eec2f63b931bd47417a81a538327af927da3e  ref/CVS
-salsa10:94d2635ff7dc536c15f8856c2aa4d9cc339ac536092dcddf5a1ae9eb329b70632432d70f9188498b783cd9a0c194c21d85d7656ee1555f07e8ac7d2b380c873a  ref/CVS
-salsa20:c3d94c2fda309cbe2eb434d115a7960e8e2ad2fcb28990ac765dfc8060bca2d7ca3bf5ca85cc15da2baeb2cdb62fc8406c354a6632c51aabc07b6d6e9101fe7c  ref/CVS
-rmd128:cdf26213a150dc3ecb610f18f6b38b46  ref/CVS
-rmd160:9c1185a5c5e9fc54612808977ee8f548b2258d31  ref/CVS
-rmd256:02ba4c4e5f8ecd1877fc52d64d30e37a2d9774fb1e5d026380ae0168e3c5522d  ref/CVS
-rmd320:22d65d5661536cdc75c1fdf5c6de7b41b9f27325ebc61e8557177d705a0ec880151c3a32a00899b8  ref/CVS
-tiger:3293ac630c13f0245f92bbb1766e16167a4e58492dde73f3  ref/CVS
-crc32:00000000  ref/CVS
-crc64:0000000000000000  ref/CVS
-adler32:00000001  ref/CVS
-jlu32:deadbeef  ref/CVS
 md2:b54174d814bb766bbc72c64e0673b98c  ref/filelists.xml
 md4:22dd4e3f8a9af8a6785abfd169005ce0  ref/filelists.xml
 md5:9bc805c9d10ae25ac29d7b6fd0dd8980  ref/filelists.xml
@@ -36,6 +17,25 @@ crc32:a03efde3  ref/filelists.xml
 crc64:a89b5fddd76aaa3e  ref/filelists.xml
 adler32:5c982f88  ref/filelists.xml
 jlu32:ecfd71ca  ref/filelists.xml
+md2:c54600b36ccd567002e90db6a3419299  ref/manifest
+md4:66f455fdd6f6499e65bf9b0ea0edd0fd  ref/manifest
+md5:05e4cfd6b38390feb870b7f11559a88f  ref/manifest
+sha1:822a60d2f622a5e09e8b721cbaa78114eaa54f1c  ref/manifest
+sha224:79c86ff1f9c7621f026181bb0e4608d138ce555f98144267e5982928  ref/manifest
+sha256:9258ac748c795de631520542e1ab10e822b208e4928d9d1b67c732d30e08b0bb  ref/manifest
+sha384:759d521244b706538ef02671fe000da1afd4fc2f49ef6ab831d3e76dc5a88486da4037ab0b7ff1e3f2e5c249d70d3fe7  ref/manifest
+sha512:4598c5da67369a1273d797a9a8a12e7b2fd79a8fc2170bc9cd1d840a366062a9ec62f35d3f50cd5eeb97b091f8192ba150eac86db6e6a913e1b3b5f3d3d03f19  ref/manifest
+salsa10:10e8252504ace29661e7f80443971810d70676c7357fe16c67d90b00268e1dbe97c3471512e292cac665b38ed98df0c8f36e92d4d3b2582f77e8869d3248dd67  ref/manifest
+salsa20:6b6debfd37ef892b4eaa632c716c25dfe3694a86bd90a2974bb31196a812725e5cead5d2592fa2bf759be88632a600a76b689407431788a4017427c58c46d7b8  ref/manifest
+rmd128:1a4c82d4c367bc063d8ac9f2950c69ed  ref/manifest
+rmd160:a4ac09a1c60c891463c319f9b450a339a642625e  ref/manifest
+rmd256:2a1b54da44a3b324d9006ed84870de9059fbf0ed2ec332c15f809f81b622e112  ref/manifest
+rmd320:e91fbede9fd9cba0008e4aaad3d59527136b704642e4161f2acc14a3282264c8794f81317f382c60  ref/manifest
+tiger:ed2ee1bb7ab132c4b45b37b94b62c28e61d047ab2dd23e46  ref/manifest
+crc32:979ee835  ref/manifest
+crc64:a62871b07192f656  ref/manifest
+adler32:aef910fe  ref/manifest
+jlu32:6a8661d4  ref/manifest
 md2:b5abf83402aa8a397eff61a66b64123a  ref/other.xml
 md4:95c8c53c233aaee1ffe97e629358a040  ref/other.xml
 md5:e5fe234d8758c82db6e228de46100318  ref/other.xml
@@ -55,6 +55,63 @@ crc32:074cc70e  ref/other.xml
 crc64:060cc50a497c69b2  ref/other.xml
 adler32:0894944e  ref/other.xml
 jlu32:2d1d4cf5  ref/other.xml
+md2:ac397af7d1017a233cbc12be9ce807df  ref/popt.Kv
+md4:9bdb25e40cec883ba61786049f2ab3ff  ref/popt.Kv
+md5:69030599bba058addbef8dbc50b648c0  ref/popt.Kv
+sha1:3a132f6500391803457d9424ab76949a9417f8d8  ref/popt.Kv
+sha224:7fd63b95e6b8fa0d6ed0a87c34afe8f50ee8e50576e3a6a8f6386d35  ref/popt.Kv
+sha256:5c4d0f7f9839d699bf3a02ffe33d3b4684b18097d6ea4a2d1f2889b007b4e6c0  ref/popt.Kv
+sha384:ccb73c19064cb02a3d82bcd6d99c687a33f626d9f58c0d196b7d32b03ce08ad5eed00dbe806ec758cf9ac6a9cbc15779  ref/popt.Kv
+sha512:2b27ff39474263d1546811e0b35982c4e2454be158db61c81924a528c6372e386c8635ad332aa15535c28369c930cee24ba62a9dba09807e494ddb918b018297  ref/popt.Kv
+salsa10:147d5c1ed4546b5e242613417712f89bf2f41d3251391d0a64c6f267c1e1c638c4ab15a733218c7723218a87759c3f1bfadfe779b0654cb8089963d77056226d  ref/popt.Kv
+salsa20:eb98abc490da07bd78d35e1217c4943c8d7042c87960036aa06f6a779dae23695f4168d4538e3b68cbef03ba0d3fb45570c3f4e4fe4d59d62e2cd8b137cf676a  ref/popt.Kv
+rmd128:97aaecd383fc08ef59055430204d14bf  ref/popt.Kv
+rmd160:a0aaa917d5f839e2c6b018a3e651516c02aa5086  ref/popt.Kv
+rmd256:5e555a4ae19fafef393510a406bebf12dbae2dbc16ebba45d5d4c2946cda12ac  ref/popt.Kv
+rmd320:4ba2b27b9d417aa49cceca41a045d71b16a8114a419f8cff8f747b40ca51097d444909ac73014b00  ref/popt.Kv
+tiger:33ca6100131208a76831fa183b973397e7a017dc4c894871  ref/popt.Kv
+crc32:15934629  ref/popt.Kv
+crc64:77402cb881a52f75  ref/popt.Kv
+adler32:57d868a0  ref/popt.Kv
+jlu32:8491bc17  ref/popt.Kv
+md2:ac397af7d1017a233cbc12be9ce807df  ref/popt.Kv-beecrypt
+md4:9bdb25e40cec883ba61786049f2ab3ff  ref/popt.Kv-beecrypt
+md5:69030599bba058addbef8dbc50b648c0  ref/popt.Kv-beecrypt
+sha1:3a132f6500391803457d9424ab76949a9417f8d8  ref/popt.Kv-beecrypt
+sha224:7fd63b95e6b8fa0d6ed0a87c34afe8f50ee8e50576e3a6a8f6386d35  ref/popt.Kv-beecrypt
+sha256:5c4d0f7f9839d699bf3a02ffe33d3b4684b18097d6ea4a2d1f2889b007b4e6c0  ref/popt.Kv-beecrypt
+sha384:ccb73c19064cb02a3d82bcd6d99c687a33f626d9f58c0d196b7d32b03ce08ad5eed00dbe806ec758cf9ac6a9cbc15779  ref/popt.Kv-beecrypt
+sha512:2b27ff39474263d1546811e0b35982c4e2454be158db61c81924a528c6372e386c8635ad332aa15535c28369c930cee24ba62a9dba09807e494ddb918b018297  ref/popt.Kv-beecrypt
+salsa10:147d5c1ed4546b5e242613417712f89bf2f41d3251391d0a64c6f267c1e1c638c4ab15a733218c7723218a87759c3f1bfadfe779b0654cb8089963d77056226d  ref/popt.Kv-beecrypt
+salsa20:eb98abc490da07bd78d35e1217c4943c8d7042c87960036aa06f6a779dae23695f4168d4538e3b68cbef03ba0d3fb45570c3f4e4fe4d59d62e2cd8b137cf676a  ref/popt.Kv-beecrypt
+rmd128:97aaecd383fc08ef59055430204d14bf  ref/popt.Kv-beecrypt
+rmd160:a0aaa917d5f839e2c6b018a3e651516c02aa5086  ref/popt.Kv-beecrypt
+rmd256:5e555a4ae19fafef393510a406bebf12dbae2dbc16ebba45d5d4c2946cda12ac  ref/popt.Kv-beecrypt
+rmd320:4ba2b27b9d417aa49cceca41a045d71b16a8114a419f8cff8f747b40ca51097d444909ac73014b00  ref/popt.Kv-beecrypt
+tiger:33ca6100131208a76831fa183b973397e7a017dc4c894871  ref/popt.Kv-beecrypt
+crc32:15934629  ref/popt.Kv-beecrypt
+crc64:77402cb881a52f75  ref/popt.Kv-beecrypt
+adler32:57d868a0  ref/popt.Kv-beecrypt
+jlu32:8491bc17  ref/popt.Kv-beecrypt
+md2:ac397af7d1017a233cbc12be9ce807df  ref/popt.Kv-nss
+md4:9bdb25e40cec883ba61786049f2ab3ff  ref/popt.Kv-nss
+md5:69030599bba058addbef8dbc50b648c0  ref/popt.Kv-nss
+sha1:3a132f6500391803457d9424ab76949a9417f8d8  ref/popt.Kv-nss
+sha224:7fd63b95e6b8fa0d6ed0a87c34afe8f50ee8e50576e3a6a8f6386d35  ref/popt.Kv-nss
+sha256:5c4d0f7f9839d699bf3a02ffe33d3b4684b18097d6ea4a2d1f2889b007b4e6c0  ref/popt.Kv-nss
+sha384:ccb73c19064cb02a3d82bcd6d99c687a33f626d9f58c0d196b7d32b03ce08ad5eed00dbe806ec758cf9ac6a9cbc15779  ref/popt.Kv-nss
+sha512:2b27ff39474263d1546811e0b35982c4e2454be158db61c81924a528c6372e386c8635ad332aa15535c28369c930cee24ba62a9dba09807e494ddb918b018297  ref/popt.Kv-nss
+salsa10:147d5c1ed4546b5e242613417712f89bf2f41d3251391d0a64c6f267c1e1c638c4ab15a733218c7723218a87759c3f1bfadfe779b0654cb8089963d77056226d  ref/popt.Kv-nss
+salsa20:eb98abc490da07bd78d35e1217c4943c8d7042c87960036aa06f6a779dae23695f4168d4538e3b68cbef03ba0d3fb45570c3f4e4fe4d59d62e2cd8b137cf676a  ref/popt.Kv-nss
+rmd128:97aaecd383fc08ef59055430204d14bf  ref/popt.Kv-nss
+rmd160:a0aaa917d5f839e2c6b018a3e651516c02aa5086  ref/popt.Kv-nss
+rmd256:5e555a4ae19fafef393510a406bebf12dbae2dbc16ebba45d5d4c2946cda12ac  ref/popt.Kv-nss
+rmd320:4ba2b27b9d417aa49cceca41a045d71b16a8114a419f8cff8f747b40ca51097d444909ac73014b00  ref/popt.Kv-nss
+tiger:33ca6100131208a76831fa183b973397e7a017dc4c894871  ref/popt.Kv-nss
+crc32:15934629  ref/popt.Kv-nss
+crc64:77402cb881a52f75  ref/popt.Kv-nss
+adler32:57d868a0  ref/popt.Kv-nss
+jlu32:8491bc17  ref/popt.Kv-nss
 md2:f0e586c7ed19fc4dc92464f6bbab5f81  ref/popt.xml
 md4:014725ad4467588ea84e66c553d9416b  ref/popt.xml
 md5:f7eb7494d9848b7075a80276f2300a09  ref/popt.xml
